; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_phy.c_scic_sds_phy_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_phy.c_scic_sds_phy_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SUSPEND_PROTOCOL_ENGINE = common dso_local global i32 0, align 4
@SCIC_SDS_REMOTE_NODE_CONTEXT_INVALID_INDEX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scic_sds_phy_suspend(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @SCU_SAS_PCFG_READ(i32* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @SUSPEND_PROTOCOL_ENGINE, align 4
  %7 = call i32 @SCU_SAS_PCFG_GEN_BIT(i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* %3, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @SCU_SAS_PCFG_WRITE(i32* %10, i32 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = load i32, i32* @SCIC_SDS_REMOTE_NODE_CONTEXT_INVALID_INDEX, align 4
  %15 = call i32 @scic_sds_phy_setup_transport(i32* %13, i32 %14)
  ret void
}

declare dso_local i32 @SCU_SAS_PCFG_READ(i32*) #1

declare dso_local i32 @SCU_SAS_PCFG_GEN_BIT(i32) #1

declare dso_local i32 @SCU_SAS_PCFG_WRITE(i32*, i32) #1

declare dso_local i32 @scic_sds_phy_setup_transport(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
